// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Numeric Range + Date Range Facet Filters Numeric Range Combination of min and max date range facets 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "range": Object {
                "released": Object {
                  "gte": "2012-12-18T00:00:00.000Z",
                  "lte": "2021-12-18T00:00:00.000Z",
                },
              },
            },
          ],
        },
      },
    },
    "facet_bucket_imdbRating": Object {
      "aggs": Object {
        "imdbRating": Object {
          "histogram": Object {
            "extended_bounds": Object {
              "max": 100,
              "min": 0,
            },
            "field": "imdbRating",
            "interval": 10,
            "min_doc_count": 0,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "range": Object {
                "released": Object {
                  "gte": "2012-12-18T00:00:00.000Z",
                  "lte": "2021-12-18T00:00:00.000Z",
                },
              },
            },
          ],
        },
      },
    },
    "facet_bucket_released": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "range": Object {
            "released": Object {
              "gte": "2012-12-18T00:00:00.000Z",
              "lte": "2021-12-18T00:00:00.000Z",
            },
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`Numeric Range + Date Range Facet Filters Numeric Range Combination of min and max date range facets: released values 1`] = `undefined`;

exports[`Numeric Range + Date Range Facet Filters Numeric Range Combination of min and max number range facets 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "range": Object {
                "imdbRating": Object {
                  "gte": 5,
                  "lte": 10,
                },
              },
            },
          ],
        },
      },
    },
    "facet_bucket_imdbRating": Object {
      "aggs": Object {
        "imdbRating": Object {
          "histogram": Object {
            "extended_bounds": Object {
              "max": 100,
              "min": 0,
            },
            "field": "imdbRating",
            "interval": 10,
            "min_doc_count": 0,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
    "facet_bucket_released": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "range": Object {
                "imdbRating": Object {
                  "gte": 5,
                  "lte": 10,
                },
              },
            },
          ],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "range": Object {
            "imdbRating": Object {
              "gte": 5,
              "lte": 10,
            },
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`Numeric Range + Date Range Facet Filters Numeric Range Combination of min and max number range facets: imdb rating values 1`] = `
Object {
  "display": "RangeSliderFacet",
  "entries": Array [
    Object {
      "count": 3120,
      "label": "0",
    },
    Object {
      "count": 521,
      "label": "10",
    },
    Object {
      "count": 473,
      "label": "20",
    },
    Object {
      "count": 58,
      "label": "30",
    },
    Object {
      "count": 28,
      "label": "40",
    },
    Object {
      "count": 98,
      "label": "50",
    },
    Object {
      "count": 28,
      "label": "60",
    },
    Object {
      "count": 48,
      "label": "70",
    },
    Object {
      "count": 68,
      "label": "80",
    },
    Object {
      "count": 38,
      "label": "90",
    },
    Object {
      "count": 28,
      "label": "100",
    },
  ],
  "identifier": "imdbRating",
  "label": "IMDB Rating",
  "type": "RangeFacet",
}
`;
